feat:调整属性逻辑
